--- a/.gitmodules
+++ b/.gitmodules
@@ -90,4 +90,4 @@
 	url = https://github.com/torch/tds.git
 [submodule "extra/nn"]
 	path = extra/nn
-	url = https://github.com/xhzhao/nn.git
+	url = https://github.com/MlWoo/nn.git
